--- a/Portf/LoginForm/css/style.css
+++ b/Portf/LoginForm/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 *{margin:0; padding: 0}
 
-body{background:url(../img/Oloon.png); background-repeat: no-repeat;background-size:cover}
+body{background:url(../img/Oloon.PNG); background-repeat: no-repeat;background-size:cover}
 
 #for_pop{display:none}
 #pass_match{display:none; color:orangered; text-shadow:2px 2px 2px rgb(187, 6, 6); text-align:center; font-weight:bold}
